# EncodeDecode

./: .gitignore  .travis.yml  CMakeLists.txt
src/: CMakeLists.txt  encoder.hpp  main.cpp
test/: CMakeLists.txt  test.cpp
